--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -5,6 +5,7 @@
 	<artifactId>envers-sample</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>Envers Schema Creation Sample</name>
+	<description>Demonstrates the usage of envers-schema-maven-plugin by generating DDL from a single JPA entity.</description>
 
 	<build>
 		<plugins>
@@ -14,23 +15,20 @@
 				<version>1.0.0-SNAPSHOT</version>
 				<executions>
 					<execution>
-						<phase>install</phase>
 						<goals>
 							<goal>execute</goal>
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+				  <dialect>org.hibernate.dialect.MySQL5Dialect</dialect>
+				  <packageName>de.exalta.envers.sample</packageName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-envers</artifactId>
