--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -3,16 +3,25 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.exalta</groupId>
 	<artifactId>envers-sample</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Envers Schema Creation Sample</name>
 	<description>Demonstrates the usage of envers-schema-maven-plugin by generating DDL from a single JPA entity.</description>
 
 	<build>
 		<plugins>
+		  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
 			<plugin>
 				<groupId>de.exalta</groupId>
 				<artifactId>envers-schema-maven-plugin</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>1.0.0</version>
 				<executions>
 					<execution>
 						<goals>
