--- a/maven-envers-schema-plugin/pom.xml
+++ b/maven-envers-schema-plugin/pom.xml
@@ -6,10 +6,33 @@
 	<version>1.0.0</version>
 	<name>Hibernate Envers Schema Generator Plugin</name>
 	<description>Analyses the JPA entities in a specified package and generates DDL statements for schema generation. Besides the Entity annotation, this plugin processes the Hibernate Envers annotation Audited and generates AUD tables accordingly.</description>
+	<inceptionYear>2014</inceptionYear>
 	<packaging>maven-plugin</packaging>
 	<prerequisites>
 		<maven>2.2.1</maven>
 	</prerequisites>
+
+	<developers>
+		<developer>
+			<name>Andreas Hahne</name>
+			<email>anhahne@aol.com</email>
+		</developer>
+	</developers>
+
+	<scm>
+		<url>https://github.com/anhahne/envers-schema</url>
+		<connection>scm:git:git@github.com:anhahne/envers-schema.git</connection>
+		<tag>v1.0.0</tag>
+	</scm>
+
+	<url>https://github.com/anhahne/envers-schema</url>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<distribution>manual</distribution>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
