--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -6,6 +6,28 @@
 	<version>1.0.0</version>
 	<name>Envers Schema Creation Sample</name>
 	<description>Demonstrates the usage of envers-schema-maven-plugin by generating DDL from a single JPA entity.</description>
+	
+	<developers>
+    <developer>
+      <name>Andreas Hahne</name>
+      <email>anhahne@aol.com</email>
+    </developer>
+  </developers>
+
+  <scm>
+    <url>https://github.com/anhahne/envers-schema</url>
+    <connection>scm:git:git@github.com:anhahne/envers-schema.git</connection>
+    <tag>v1.0.0</tag>
+  </scm>
+
+  <url>https://github.com/anhahne/envers-schema</url>
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <distribution>manual</distribution>
+    </license>
+  </licenses>
 
 	<build>
 		<plugins>
@@ -41,7 +63,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-envers</artifactId>
-			<version>4.2.7.Final</version>
+			<version>4.3.1.Final</version>
 		</dependency>
 	</dependencies>
 </project>
