--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,19 @@
   <groupId>de.exalta</groupId>
   <artifactId>envers-schema</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0</version>
-  
+  <version>1.1.0-SNAPSHOT</version>
+
   <name>Hibernate Envers Schema Generator Plugin</name>
   <description>Analyses the JPA entities in a specified package and generates DDL statements for schema generation. Besides the Entity annotation, this plugin processes the Hibernate Envers annotation Audited and generates AUD tables accordingly.</description>
   <inceptionYear>2014</inceptionYear>
   <prerequisites>
     <maven>2.2.1</maven>
   </prerequisites>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
 
   <modules>
     <module>maven-envers-schema-plugin</module>
