Set Version to 1.0.1

--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.exalta</groupId>
     <artifactId>envers-schema</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
   
 	<artifactId>envers-sample</artifactId>
