--- a/maven-envers-schema-plugin/pom.xml
+++ b/maven-envers-schema-plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.exalta</groupId>
     <artifactId>envers-schema</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
