--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.exalta</groupId>
     <artifactId>envers-schema</artifactId>
-    <version>1.0.2</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
   
 	<artifactId>envers-sample</artifactId>
@@ -16,7 +16,7 @@
 			<plugin>
 				<groupId>de.exalta</groupId>
 				<artifactId>envers-schema-maven-plugin</artifactId>
-				<version>1.0.2</version>
+				<version>1.1.0-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<goals>
